[package]
name = "swrast"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = "0.30.3"
gltf = { version = "1.4.1", features = ["KHR_materials_transmission"] }
image = "0.25.6"
pixels = { git = "https://github.com/mdesmedt/pixels.git", branch = "scalingmode" }
winit = "0.30.11"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
crossbeam-utils = "0.8.21"
rayon = "1.10.0"
boxcar = "0.2.13"
ordered-float = "5.0.0"
parry3d = "0.21.1"
clap = { version = "4.5.40", features = ["derive"] }

[profile.shipping]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
