[package]
name = "swrast"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = "0.30.5"
gltf = { version = "1.4.1", features = ["KHR_materials_transmission"] }
image = "0.25.8"
pixels = { git = "https://github.com/mdesmedt/pixels.git", branch = "scalingmode" }
winit = "0.30.12"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
rayon = "1.11.0"
boxcar = "0.2.14"
ordered-float = "5.0.0"
parry3d = "0.24.0"
clap = { version = "4.5.47", features = ["derive"] }
dashmap = "6.1.0"

[profile.profiling]
inherits = "release"
debug = true

[profile.shipping]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
